--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,67 +1,69 @@
-cmake_minimum_required(VERSION 3.2.0)
-# required to enable MSVC_RUNTIME_LIBRARY
-cmake_policy(SET CMP0091 NEW)
-# set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
+cmake_minimum_required(VERSION 3.7.2)
 
-project(ExtIO_RTL)
+if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
+    project(ExtIO_RTL)
+else()
+    project(ExtIO_RTL CXX)
+endif()
 
-# default build type: Release
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif()
-if (NOT MSVC)
-    message(ERROR "CMakeLists.txt does only support the MSVC compiler")
-endif()
-# allow overriding cmake options with standard variables - from a project including this one
-cmake_policy(SET CMP0077 NEW)  # set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 
-set(PTHREADS4W_VERSION 3)
-add_subdirectory(pthread-win32)
-if (TARGET libpthreadVC3)
-    set( THREADS_FOUND  TRUE)
-    set( Threads_FOUND  TRUE)
-    set( THREADS_PTHREADS_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/pthread-win32" )
-    set( THREADS_PTHREADS_WIN32_LIBRARY libpthreadVC3)
-    set( CMAKE_THREAD_LIBS_INIT  libpthreadVC3)
+find_package(Threads)
+find_package(PkgConfig)
+find_package(RTLSDR)
+
+if (NOT RTLSDR_FOUND)
+    message(STATUS "RTL-SDR development files not found...")
+    set(RTLSDR_LIBRARIES "" CACHE STRING "manual RTL-SDR library path")
+    set(RTLSDR_INCLUDE_DIRS "" CACHE STRING "manual RTL-SDR include path")
+endif ()
+
+message(STATUS "RTLSDR_INCLUDE_DIRS - ${RTLSDR_INCLUDE_DIRS}")
+message(STATUS "RTLSDR_LIBRARIES - ${RTLSDR_LIBRARIES}")
+
+
+if(PKG_CONFIG_FOUND)
+    pkg_check_modules(LIBUSB libusb-1.0 IMPORTED_TARGET)
 else()
-    message(FATAL_ERROR "ExtIO_RTL: target libpthreadVC3 not defined!")
+    set(LIBUSB_LIBRARIES "" CACHE STRING "manual libusb path")
+    set(LIBUSB_INCLUDE_DIRS "" CACHE STRING "manual libusb include path")
 endif()
 
-add_subdirectory(libusb)
-if (TARGET libusb_static)
-    set( LIBUSB_FOUND TRUE )
-    set( LIBUSB_LIBRARIES  libusb_static )
+
+if(MSVC)
+    set(THREADS_PTHREADS_LIBRARY "" CACHE STRING "manual pthread-win32 path")
+    set(THREADS_PTHREADS_INCLUDE_DIR "" CACHE STRING "manual pthread-win32 includepath")
+else()
+    set(THREADS_PTHREADS_LIBRARY "" CACHE INTERNAL "manual pthread-win32 path")
+    set(THREADS_PTHREADS_INCLUDE_DIR "" CACHE INTERNAL "manual pthread-win32 includepath")
 endif()
 
-add_subdirectory(librtlsdr)
+if(PKG_CONFIG_FOUND AND NOT LIBUSB_FOUND)
+    message(FATAL_ERROR "LibUSB 1.0 required to compile ExtIO_RTL")
+endif()
+if(NOT THREADS_FOUND)
+    message(FATAL_ERROR "pthreads(-win32) required to compile ExtIO_RTL")
+endif()
 
+include_directories(${RTLSDR_INCLUDE_DIRS})
+
+include_directories(ExtIO_RTL PRIVATE
+    ${CMAKE_SOURCE_DIR}/res
+)
 
 add_library(ExtIO_RTL SHARED
-    src/ExtIO_RTL.cpp  src/ExtIO_RTL.h  src/ExtIO_RTL.def
-    src/dllmain.cpp
+    src/ExtIO_RTL.cpp src/ExtIO_RTL.h src/ExtIO_RTL.def src/dllmain.cpp
     res/resource.h  res/resource.rc
-    # src/LC_ExtIO_Types.h  src/config_file.cpp  src/config_file.h  src/targetver.h
 )
-set_target_properties(ExtIO_RTL PROPERTIES PREFIX "")
+
 set_property(TARGET ExtIO_RTL PROPERTY CXX_STANDARD 17)
 set_property(TARGET ExtIO_RTL PROPERTY CXX_STANDARD_REQUIRED ON)
 target_compile_definitions(ExtIO_RTL PUBLIC _CRT_SECURE_NO_WARNINGS)
-target_compile_definitions(ExtIO_RTL PRIVATE rtlsdr_STATIC)
-
-
-# set our and override dependent libraries' MSVC_RUNTIME_LIBRARY
-set_property(TARGET ExtIO_RTL PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set_property(TARGET libpthreadVC3 PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set_property(TARGET libusb_static PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-set_property(TARGET rtlsdr_static PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-target_include_directories(ExtIO_RTL PRIVATE
-    "${CMAKE_CURRENT_SOURCE_DIR}/res"
-    librtlsdr/include
-)
 
 target_link_libraries(ExtIO_RTL PRIVATE
-    rtlsdr_static
-    libpthreadVC3
-    libusb_static
+    ${LIBUSB_LIBRARIES}
+    ${RTLSDR_LIBRARIES}
+    ${THREADS_PTHREADS_LIBRARY}
 )
